--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -9,32 +9,107 @@
 <body bgcolor=#c5bfff style="text-align:center">
 
   <h1>Hi, I'm Hazel.</h1>
-  <div class="p1">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-      eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-      sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <div class="flex-container">
+    <div class="gallery">
+      <a target="_blank" href="images/painting.png">
+        <img src="images/painting.png" alt="midsommar" width="600" height="400">
+      </a>
+      <div class="desc">Midsommar</div>
     </div>
 
-    <div class="p2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+    <div class="gallery">
+      <a target="_blank" href="images/catgirl.png">
+        <img src="images/catgirl.png" alt="catgirl" width="600" height="400">
+      </a>
+      <div class="desc">Catra</div>
+    </div>
 
-      <div class="p3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur.</p>
-        </div>
+    <div class="gallery">
+      <a target="_blank" href="images/pink.jpg">
+        <img src="images/pink.jpg" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Madeleine</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/sunglasses.png">
+        <img src="images/sunglasses.png" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Claudia</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/painting.png">
+        <img src="images/painting.png" alt="midsommar" width="600" height="400">
+      </a>
+      <div class="desc">Midsommar</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/catgirl.png">
+        <img src="images/catgirl.png" alt="catgirl" width="600" height="400">
+      </a>
+      <div class="desc">Catra</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/pink.jpg">
+        <img src="images/pink.jpg" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Madeleine</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/sunglasses.png">
+        <img src="images/sunglasses.png" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Claudia</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/painting.png">
+        <img src="images/painting.png" alt="midsommar" width="600" height="400">
+      </a>
+      <div class="desc">Midsommar</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/catgirl.png">
+        <img src="images/catgirl.png" alt="catgirl" width="600" height="400">
+      </a>
+      <div class="desc">Catra</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/pink.jpg">
+        <img src="images/pink.jpg" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Madeleine</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/sunglasses.png">
+        <img src="images/sunglasses.png" alt="Mountains" width="600" height="400">
+      </a>
+      <div class="desc">Claudia</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/painting.png">
+        <img src="images/painting.png" alt="midsommar" width="600" height="400">
+      </a>
+      <div class="desc">Midsommar</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="images/catgirl.png">
+        <img src="images/catgirl.png" alt="catgirl" width="600" height="400">
+      </a>
+      <div class="desc">Catra</div>
+    </div>
+  </div>
 
 
-      </body>
-      </html>
+</body>
+</html>
