--- a/project1/about.html
+++ b/project1/about.html
@@ -18,7 +18,7 @@
     <div class="header"><a href="about.html">About Me</a></div>
   </div>
 
-  <div class="about-img"><img src="images/selfie.jpg" alt="hello" height="30%"></div>
+  <div class="about-img"><img src="images/selfie.jpg" alt="hello" height="300px"></div>
 
   <div class="about">
     <h2>About Me</h2>
@@ -27,12 +27,13 @@
       art programs for children and has been participating in game jams for the last four years.
       She especially values the interactive and transformative possibilities of games
       as a medium for both art and play.</p>
+      <div class="about-links">
+          <a href="https://hazelthexton.com">My website</a>
+
+          <a href="https://hazelthexton.itch.io/">My games</a>
+        </div>
     </div>
 
-    <a href="https://hazelthexton.com">My website</a>
-
-
-    <a href="https://hazelthexton.itch.io/">My games</a>
 
     <footer>All content copyright © Hazel Thexton 2019.</footer>
   </body>
