--- a/project1/exercise2/index.html
+++ b/project1/exercise2/index.html
@@ -6,110 +6,51 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body bgcolor=#c5bfff style="text-align:center">
-
-  <h1>Hi, I'm Hazel.</h1>
-
-  <div class="flex-container">
-    <div class="gallery">
-      <a target="_blank" href="images/painting.png">
-        <img src="images/painting.png" alt="midsommar" width="200" height="400">
-      </a>
-      <div class="desc">Midsommar</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/catgirl.png">
-        <img src="images/catgirl.png" alt="catgirl" width="200" height="400">
-      </a>
-      <div class="desc">Catra</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/pink.jpg">
-        <img src="images/pink.jpg" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Madeleine</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/sunglasses.png">
-        <img src="images/sunglasses.png" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Claudia</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/painting.png">
-        <img src="images/painting.png" alt="midsommar" width="200" height="400">
-      </a>
-      <div class="desc">Midsommar</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/catgirl.png">
-        <img src="images/catgirl.png" alt="catgirl" width="200" height="400">
-      </a>
-      <div class="desc">Catra</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/pink.jpg">
-        <img src="images/pink.jpg" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Madeleine</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/sunglasses.png">
-        <img src="images/sunglasses.png" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Claudia</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/painting.png">
-        <img src="images/painting.png" alt="midsommar" width="200" height="400">
-      </a>
-      <div class="desc">Midsommar</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/catgirl.png">
-        <img src="images/catgirl.png" alt="catgirl" width="200" height="400">
-      </a>
-      <div class="desc">Catra</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/pink.jpg">
-        <img src="images/pink.jpg" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Madeleine</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/sunglasses.png">
-        <img src="images/sunglasses.png" alt="Mountains" width="200" height="400">
-      </a>
-      <div class="desc">Claudia</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/painting.png">
-        <img src="images/painting.png" alt="midsommar" width="200" height="400">
-      </a>
-      <div class="desc">Midsommar</div>
-    </div>
-
-    <div class="gallery">
-      <a target="_blank" href="images/catgirl.png">
-        <img src="images/catgirl.png" alt="catgirl" width="200" height="400">
-      </a>
-      <div class="desc">Catra</div>
-    </div>
+<body>
+<div class="paragraphs">
+<div class="paragraph-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
+<div class="paragraph-2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
+<div class="paragraph-3"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
+<div class="paragraph-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
+<div class="paragraph-5"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
+<div class="paragraph-6"><p>Lorem ipsum dolor sit amet, consectetur adipiscing
+  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+  enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+  cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+  laborum.</p></div>
   </div>
-
 
 </body>
 </html>
