P1: Chnaged link formatting

--- a/project1/notes.html
+++ b/project1/notes.html
@@ -31,7 +31,7 @@
 
           <b>Keywords: </b>ARPANET, decentralization, distributed network, TCP/IP<br>
           <br>
-          <b><a href="http://www.santoromano.com/readings/internethistory.pdf">Reading link</a></b>
+          <a href="http://www.santoromano.com/readings/internethistory.pdf">Reading link</a></b>
         </span>
       </p>
     </div>
