--- a/project3/index.html
+++ b/project3/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
-    <script src="js/libraries/p5.min.js"></script>
+    <script src="javascript/libraries/p5.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/script.js"></script>
+    <script src="javascript/script.js"></script>
   </head>
 
   <body>
